Fix calibration reference data loading

--- a/experiments/perceptual-localization.html
+++ b/experiments/perceptual-localization.html
@@ -423,6 +423,7 @@
       initCalibration({
         defaultObjectId: 'credit-card',
         startButton,
+        referenceDataUrl: '../shared-resources/reference-data/object-dimensions.xml',
         elements: {
           section: document.getElementById('calibration-section'),
           objectSelect: document.getElementById('calibration-object'),
