--- a/experiments/jnd-go-nogo.html
+++ b/experiments/jnd-go-nogo.html
@@ -331,6 +331,7 @@
       defaultObjectId: 'credit-card',
       storageKey: 'visual-jnd-calibration',
       startButton,
+      referenceDataUrl: '../shared-resources/reference-data/object-dimensions.xml',
       elements: {
         section: document.getElementById('calibration-section'),
         objectSelect: document.getElementById('calibration-object'),
