--- a/experiments/jnd-go-nogo.html
+++ b/experiments/jnd-go-nogo.html
@@ -12,7 +12,7 @@
     :root {
       color-scheme: light dark;
       font-family: "Inter", "Helvetica Neue", Arial, sans-serif;
-      --bg: #d4d7dd;
+      --bg: radial-gradient(circle at top, #0f172a 0%, #111827 60%, #020617 100%);
       --card-bg: rgba(15, 23, 42, 0.9);
       --accent: #38bdf8;
       --stage-size: min(68vw, 68vh);
