Add delayed perceptual localization experiment

--- a/index.html
+++ b/index.html
@@ -191,6 +191,16 @@
       </li>
       <li class="experiment-card">
         <div>
+          <h2>Perceptual Localization (Delayed)</h2>
+          <p>
+            Hold fixation until the central point vanishes, then report the flash location. The release delay varies from
+            0 to 1.4 s after the target disappears, and early responses play a warning tone.
+          </p>
+        </div>
+        <a href="experiments/perceptual-localization-delayed.html">Start experiment</a>
+      </li>
+      <li class="experiment-card">
+        <div>
           <h2>Auditory JND (Tone Pair)</h2>
           <p>
             Listen to two brief sinewave tones separated by silence and release as soon as you detect that the second
