--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         Each experiment is optimised for desktop and mobile so you can participate wherever you are.
       </p>
     </header>
-
+    
     <ul class="experiment-list">
       <li class="experiment-card">
         <div>
@@ -169,6 +169,17 @@
         </div>
         <a href="experiments/jnd-go-nogo.html">Start experiment</a>
       </li>
+
+      <li class="experiment-card">
+        <div>
+          <h2>Color Memory (Single Patch)</h2>
+          <p>
+            Single central color flash (60 ms); report hue on a randomly rotated wheel.
+          </p>
+        </div>
+        <p><a href="experiments/color-memory-single.html">Open</a></p>
+      </li>
+
       <li class="experiment-card">
         <div>
           <h2>Attentional Blink (Digits)</h2>
