--- a/experiments/color-memory-single.html
+++ b/experiments/color-memory-single.html
@@ -32,10 +32,12 @@
         padding: clamp(24px, 6vw, 72px);
         z-index: 20;
         backdrop-filter: blur(6px);
+        overflow-y: auto;
       }
       .overlay[hidden] { display: none; }
       .overlay-card {
         width: min(92vw, 720px);
+        max-height: calc(100vh - clamp(24px, 6vw, 72px) * 2);
         border: var(--border);
         border-radius: clamp(24px, 5vw, 32px);
         background: rgba(15, 23, 42, 0.88);
@@ -44,6 +46,7 @@
         display: flex;
         flex-direction: column;
         gap: clamp(16px, 4vw, 24px);
+        overflow-y: auto;
       }
       .overlay-card h1, .overlay-card h2 { margin: 0; }
       .calibration-card { gap: clamp(20px, 4vw, 28px); }
