--- a/experiments/color-memory-single.html
+++ b/experiments/color-memory-single.html
@@ -195,7 +195,11 @@
       .patch     { box-shadow: 0 0 0 2px rgba(0,0,0,0.2) inset; }
       .wheel {
         position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);
-        width: 85vmin; height: 85vmin; max-width: 820px; max-height: 820px;
+        --wheel-size: min(70vmin, 600px, calc(100% - clamp(64px, 10vw, 140px)));
+        width: var(--wheel-size);
+        height: var(--wheel-size);
+        max-width: 640px;
+        max-height: 640px;
         border-radius: 50%; pointer-events: auto; display: none;
         /* A smooth HSL color wheel */
         background: conic-gradient(from 0deg, 
