--- a/experiments/perceptual-localization-delayed.html
+++ b/experiments/perceptual-localization-delayed.html
@@ -18,6 +18,7 @@
         --bg: radial-gradient(circle at top, #0f172a 0%, #111827 60%, #020617 100%);
         --card-bg: rgba(15, 23, 42, 0.9);
         --accent: #38bdf8;
+        --page-padding: clamp(16px, 4vw, 48px);
       }
 
       body {
@@ -29,7 +30,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
-        padding: clamp(16px, 4vw, 48px);
+        padding: var(--page-padding);
         box-sizing: border-box;
         gap: clamp(24px, 5vw, 40px);
       }
@@ -306,13 +307,22 @@
       }
 
       @media (max-width: 640px) {
+        body {
+          --page-padding: clamp(12px, 5vw, 24px);
+          padding: var(--page-padding) 0;
+        }
+
         .card {
           padding: clamp(20px, 5vw, 32px);
         }
 
         #experiment-stage {
-          width: min(82vw, 82vh);
-          height: min(82vw, 82vh);
+          width: min(100vw, 100vh);
+          height: min(100vw, 100vh);
+          max-width: 100vw;
+          max-height: 100vw;
+          min-width: min(260px, 100vw);
+          min-height: min(260px, 100vw);
         }
       }
     </style>
