--- a/experiments/perceptual-localization.html
+++ b/experiments/perceptual-localization.html
@@ -60,6 +60,7 @@
         display: flex;
         flex-direction: column;
         gap: clamp(16px, 4vw, 28px);
+        box-sizing: border-box;
       }
 
       .card section {
@@ -307,7 +308,8 @@
         }
 
         .card {
-          padding: clamp(20px, 5vw, 32px);
+          width: min(100vw, 840px);
+          padding: clamp(20px, 4vw, 32px);
         }
 
         #experiment-stage {
