Add Sperling partial report experiment

--- a/index.html
+++ b/index.html
@@ -172,6 +172,17 @@
 
       <li class="experiment-card">
         <div>
+          <h2>Partial Report (Sperling)</h2>
+          <p>
+            View a 3×4 grid of letters for 50 ms, then report the letters cued by blue squares after a variable delay. Tracks
+            partial-report accuracy, misses, intrusions, and duplicates on every trial.
+          </p>
+        </div>
+        <a href="experiments/partial-report/index.html">Start experiment</a>
+      </li>
+
+      <li class="experiment-card">
+        <div>
           <h2>Color Memory (Single Patch)</h2>
           <p>
             Single central color flash (60 ms); report hue on a randomly rotated wheel.
