Fix partial-report jsPsych asset paths

--- a/experiments/partial-report/index.html
+++ b/experiments/partial-report/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Partial Report (Sperling)</title>
-    <link rel="stylesheet" href="../jspsych/css/jspsych.css" />
+    <link rel="stylesheet" href="../../jspsych/css/jspsych.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -20,10 +20,10 @@
       <div id="jspsych-root" hidden></div>
     </div>
 
-    <script src="../jspsych/dist/jspsych.js"></script>
-    <script src="../jspsych/plugins/html-button-response.js"></script>
-    <script src="../jspsych/plugins/html-keyboard-response.js"></script>
-    <script src="../jspsych/plugins/call-function.js"></script>
+    <script src="../../jspsych/dist/jspsych.js"></script>
+    <script src="../../jspsych/plugins/html-button-response.js"></script>
+    <script src="../../jspsych/plugins/html-keyboard-response.js"></script>
+    <script src="../../jspsych/plugins/call-function.js"></script>
     <script src="task.js"></script>
   </body>
 </html>
