Add Things 2AFC experiment to homepage

--- a/index.html
+++ b/index.html
@@ -193,6 +193,17 @@
 
       <li class="experiment-card">
         <div>
+          <h2>Things Image Matching (2AFC)</h2>
+          <p>
+            Study a reference object, then choose which of two candidates belongs to the same category. Includes neutral,
+            prototypical, and outlier exemplars drawn from the THINGS database.
+          </p>
+        </div>
+        <a href="experiments/things-2afc.html">Start experiment</a>
+      </li>
+
+      <li class="experiment-card">
+        <div>
           <h2>Attentional Blink (Digits)</h2>
           <p>
             Observe a rapid stream of letters and digits, then report the two target numbers.
